@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SHA1-HASHCASH 1"
-.TH SHA1-HASHCASH 1 "2004-03-07" "0.29" "sha1"
+.TH SHA1-HASHCASH 1 "2004-03-07" "0.30" "sha1"
 .SH "NAME"
 sha1 \- Secure Hash Algorithm (version 1) hash function
 .SH "SYNOPSIS"
